--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,6 @@ nav ul li a {
 
 .box {
     width: 250px; /* Adjust the width as needed */
-    background-color: none; /* Box background color */
     border: 2px solid yellow; /* Border with color */
     padding: 20px 40px; /* Padding inside the box */
     text-align: center; /* Center text horizontally */
@@ -101,7 +100,7 @@ nav ul li a {
 /* contact.html */
 .contact {
     position: relative;
-    background: url('../contact-html.webp') center center no-repeat;
+    background: url('../Images/contact-html.webp');
     background-size: cover;
     height: 70vh; 
 }
